correction mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,8 +25,8 @@ a{text-decoration:none;color:#cc0000;}a:hover{text-decoration:none;}
 .menu .submenu a{padding-left:2em;padding-top:0.4em;padding-right:0.5em;font-size:0.9em;}.menu .submenu a.active{background:#262829;color:white;}.menu .submenu a.active:before{content:'› ';font-size:1.3em;}
 .main{width:100%;color:#cc0000;margin-bottom:3em;}.main img{width:300px;}
 .main h1{font-size:3em;text-align:center;}
-.main h2{margin-top:10px;text-align:center;color:#333;}.main h2 .links{margin:0;margin-left:10px;width:100px;font-size:1em;}.main h2 .links a{color:grey;margin-right:5px;}.main h2 .links a:hover{color:#4d4d4d;}
-.home{padding:8em 0 3em;}.home .name{text-align:left;line-height:50px;margin-top:180px;}
+.main h2{margin-top:10px;text-align:left;color:#333;}.main h2 .links{margin:0;margin-left:10px;width:100px;font-size:1em;}.main h2 .links a{color:grey;margin-right:5px;}.main h2 .links a:hover{color:#4d4d4d;}
+.home{padding:5em 0 0;}.home .name{text-align:left;line-height:50px;margin-top:180px;}
 .animate-enter{-webkit-transition:0.5s linear all;-moz-transition:0.5s linear all;-o-transition:0.5s linear all;transition:0.5s linear all;opacity:0;}
 .animate-enter.animate-enter-active{opacity:1;}
 span .link-icon,li .link-icon{display:none;}
