--- a/public/css/style.less
+++ b/public/css/style.less
@@ -164,7 +164,7 @@ a{
   }
   h2{
     margin-top: 10px;
-    text-align: center;
+    text-align: left;
     color: #333;
     .links{
       margin: 0;
@@ -184,7 +184,7 @@ a{
 }
 
 .home{
-  padding: 8em 0 3em;
+  padding: 5em 0 0;
   .name{
     text-align: left;
     line-height: 50px;
